styles.css
@charset "UTF-8";

body {
    font-family: 'Lexend', sans-serif;
    margin: 0;
}

h1.title {
    text-align: center;
    width: auto;
}

img.logo {
    width: 20%;
    margin: 20 20 0 20;
}

h4 {
    padding: 0;
    margin-bottom: 6;
    margin-top: 12;
}

h3 {
    margin-bottom: 14px;
}

button.primary-button {
    color: white;
    font-family: 'Lexend', sans-serif;
    font-size: medium;
    background-color: rgb(249, 157, 28);
    border: none;
    width: 100%;
    padding-top: 20;
    padding-bottom: 20;
    text-align: center;
    margin: auto;
    display: block;
}

button.secondary-button {
    color: black;
    font-family: 'Lexend', sans-serif;
    font-size: medium;
    background-color: white;
    border: none;
    width: 100%;
    padding-top: 20;
    padding-bottom: 20;
    text-align: center;
    margin: auto;
    display: none;
}

.information-header {
    left: 0;
    color: rgb(249, 157, 28);
}

input {
    padding: 10 20 10 20;
    border-radius: 8px;
    margin-bottom: 8px;
    width: 100%;
    max-width: 455;
    border: 1px solid rgb(184, 184, 184);
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    padding: 10 20 10 20;
    border-radius: 8px;
    border: 1px solid grey;
    width: 100%;
    max-width: 455;
    margin-bottom: 8px;
}

.page-content {
    margin: 30 20 10 20;
    transition: height 0.3s;
}

.reference-container {
    background-color: rgb(238, 238, 238); 
    padding: 10 20 20 20;
    margin-bottom: 25;
    border-radius: 8px;
    max-width: 420;
    width: calc(100% - 40px);
    display: inline-block;
}

.reference-container input {
    width: 80%;
    max-width: 350;
}


div #personal-info-container {
    display: block;
    height: auto;
}

div #job-preference-container {
    display: none;
    height: 0%;
}

div #availability-container {
    display: none;
    height: 0%;
}

div #successful-qualities-container {
    display: none;
    height: 0%;
}

div #work-experience-container {
    display: none;
    height: 0%;
}

div #education-info-container {
    display: none;
    height: 0%;
}

div #references-container {
    display:none;
    height:0%;
}

